--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# local env files
+.env.local
+.env.*.local
+.env
+
 node_modules
 .DS_Store
 dist
