--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "element-plus": "^2.9.3",
+    "firebase": "^11.2.0",
     "pinia": "^2.3.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
