--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.7",
+    "@types/sass": "^1.45.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
@@ -36,6 +37,7 @@
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.6",
     "prettier": "^3.4.2",
+    "sass": "^1.85.0",
     "sass-embedded": "^1.83.4",
     "typescript": "~5.7.3",
     "unplugin-auto-import": "^19.0.0",
