--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,21 @@
 {
   "hosting": {
     "public": "dist",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "environment": {
+      "VITE_API_KEY": "${VITE_API_KEY}",
+      "VITE_AUTH_DOMAIN": "${VITE_AUTH_DOMAIN}",
+      "VITE_PROJECT_ID": "${VITE_PROJECT_ID}",
+      "VITE_STORAGE_BUCKET": "${VITE_STORAGE_BUCKET}",
+      "VITE_MESSAGING_SENDER_ID": "${VITE_MESSAGING_SENDER_ID}",
+      "VITE_APP_ID": "${VITE_APP_ID}",
+      "VITE_DATABASE_URL": "${VITE_DATABASE_URL}"
+    }
   }
 }
