--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,7 +1,7 @@
 name: Firebase Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,9 +19,16 @@ jobs:
           VITE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
           VITE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
           VITE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+      - name: Authenticate with Firebase
+        run: |
+          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/firebase-key.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/firebase-key.json" >> $GITHUB_ENV
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy --only hosting --project note-taking-app-72ec5
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          GOOGLE_APPLICATION_CREDENTIALS: $HOME/firebase-key.json
