added cache control

--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,11 @@
         "headers": [
           {
             "key": "Content-Type",
-            "value": "application/javascript"
+            "value": "application/javascript; charset=utf-8"
+          },
+          {
+            "key": "Cache-Control",
+            "value": "no-cache, no-store, must-revalidate"
           }
         ]
       }
